--- a/templates/env.j2
+++ b/templates/env.j2
@@ -1,6 +1,6 @@
 SEMAPHORE_DB_USER={{ semaphore_database_username }}
 SEMAPHORE_DB_PASS={{ semaphore_database_password }}
-SEMAPHORE_DB_HOST={{ semaphore_database_hostname }}
+SEMAPHORE_DB_HOST={{ semaphore_database_host }}
 SEMAPHORE_DB_PORT={{ semaphore_database_port }}
 SEMAPHORE_DB_DIALECT={{ semaphore_database_dialect }}
 SEMAPHORE_DB={{ semaphore_database_name }}
