--- a/templates/systemd/semaphore.service.j2
+++ b/templates/systemd/semaphore.service.j2
@@ -22,7 +22,9 @@ ExecStartPre={{ devture_systemd_docker_base_host_command_docker }} create \
                 {% endif %}
                 --label-file={{ semaphore_config_path }}/labels \
                 --network={{ semaphore_container_network }} \
-                --mount type=bind,src={{ semaphore_data_path }},dst=/semaphore/storage \
+                --tmpfs=/tmp:rw,noexec,nosuid,size=100m \
+                --mount type=bind,src={{ semaphore_dyn_config_path }},dst=/etc/semaphore \
+                --mount type=bind,src={{ semaphore_playbook_path }},dst={{ semaphore_container_playbook_path }} \
                 --read-only \
                 --env-file={{ semaphore_env_path }} \
                 {{ semaphore_container_image }}
