--- a/templates/systemd/semaphore.service.j2
+++ b/templates/systemd/semaphore.service.j2
@@ -23,6 +23,7 @@ ExecStartPre={{ devture_systemd_docker_base_host_command_docker }} create \
                 --label-file={{ semaphore_config_path }}/labels \
                 --network={{ semaphore_container_network }} \
                 --tmpfs=/tmp:rw,noexec,nosuid,size=100m \
+                --mount type=bind,src={{ semaphore_config_path }}/passwd,dst=/etc/passwd,ro \
                 --mount type=bind,src={{ semaphore_dyn_config_path }},dst=/etc/semaphore \
                 --mount type=bind,src={{ semaphore_playbook_path }},dst={{ semaphore_container_playbook_path }} \
                 --read-only \
