fix: Don't check for keys as there is no way to store

--- a/templates/env.j2
+++ b/templates/env.j2
@@ -10,5 +10,6 @@ SEMAPHORE_ADMIN_NAME={{ semaphore_admin_name }}
 SEMAPHORE_ADMIN_EMAIL={{ semaphore_admin_email }}
 SEMAPHORE_ADMIN={{ semaphore_admin_name }}
 SEMAPHORE_ACCESS_KEY_ENCRYPTION={{ semaphore_access_key_encryption }}
+ANSIBLE_HOST_KEY_CHECKING=False
 
 {{ semaphore_environment_variables_extension }}
