Make the project compliant with REUSE
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/env.j2
+++ b/templates/env.j2
@@ -1,3 +1,9 @@
+{#
+SPDX-FileCopyrightText: 2023 Julian-Samuel Gebühr
+
+SPDX-License-Identifier: AGPL-3.0-or-later
+#}
+
 SEMAPHORE_DB_USER={{ semaphore_database_username }}
 SEMAPHORE_DB_PASS={{ semaphore_database_password }}
 SEMAPHORE_DB_HOST={{ semaphore_database_host }}
