--- a/templates/customizations/Dockerfile.j2
+++ b/templates/customizations/Dockerfile.j2
@@ -1,3 +1,9 @@
+{#
+SPDX-FileCopyrightText: 2024 MASH project contributors
+
+SPDX-License-Identifier: AGPL-3.0-or-later
+#}
+
 FROM {{ semaphore_container_image }}
 
 {% if semaphore_container_image_customizations_packages_to_install | length > 0 %}
