Remove `semaphore_env_path`
`semaphore_env_path` is confusing as it indicates a file (env), while other `_path`s indicate directories.

Reuse https://github.com/mother-of-all-self-hosting/ansible-role-vaultwarden/blob/219e939cd4c5965a8022eaccd52c862925ccd8e7/tasks/validate_config.yml.

Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/systemd/semaphore.service.j2
+++ b/templates/systemd/semaphore.service.j2
@@ -35,7 +35,7 @@ ExecStartPre={{ devture_systemd_docker_base_host_command_docker }} create \
       {% if semaphore_container_http_host_bind_port %}
       -p {{ semaphore_container_http_host_bind_port }}:{{ semaphore_container_http_port }} \
       {% endif %}
-      --env-file={{ semaphore_env_path }} \
+      --env-file={{ semaphore_config_path }}/env \
       --label-file={{ semaphore_config_path }}/labels \
       --mount type=bind,src={{ semaphore_config_path }}/passwd,dst=/etc/passwd,ro \
       --mount type=bind,src={{ semaphore_dyn_config_path }},dst=/etc/semaphore \
