Replace `semaphore_database_host` with `semaphore_database_hostname`
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/env.j2
+++ b/templates/env.j2
@@ -6,7 +6,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
 
 SEMAPHORE_DB_USER={{ semaphore_database_username }}
 SEMAPHORE_DB_PASS={{ semaphore_database_password }}
-SEMAPHORE_DB_HOST={{ semaphore_database_host }}
+SEMAPHORE_DB_HOST={{ semaphore_database_hostname }}
 SEMAPHORE_DB_PORT={{ semaphore_database_port }}
 SEMAPHORE_DB_DIALECT={{ semaphore_database_dialect }}
 SEMAPHORE_DB={{ semaphore_database_name }}
