--- a/templates/env.j2
+++ b/templates/env.j2
@@ -11,10 +11,10 @@ SEMAPHORE_DB_PORT={{ semaphore_database_port }}
 SEMAPHORE_DB_DIALECT={{ semaphore_database_dialect }}
 SEMAPHORE_DB={{ semaphore_database_name }}
 SEMAPHORE_PLAYBOOK_PATH={{ semaphore_container_playbook_path }}
+SEMAPHORE_ADMIN={{ semaphore_admin_username }}
 SEMAPHORE_ADMIN_PASSWORD={{ semaphore_admin_password }}
 SEMAPHORE_ADMIN_NAME={{ semaphore_admin_name }}
 SEMAPHORE_ADMIN_EMAIL={{ semaphore_admin_email }}
-SEMAPHORE_ADMIN={{ semaphore_admin_name }}
 SEMAPHORE_ACCESS_KEY_ENCRYPTION={{ semaphore_access_key_encryption }}
 ANSIBLE_HOST_KEY_CHECKING=False
 
