--- a/templates/systemd/semaphore.service.j2
+++ b/templates/systemd/semaphore.service.j2
@@ -35,9 +35,9 @@ ExecStartPre={{ devture_systemd_docker_base_host_command_docker }} create \
       {% if semaphore_container_http_host_bind_port %}
       -p {{ semaphore_container_http_host_bind_port }}:{{ semaphore_container_http_port }} \
       {% endif %}
-      --env-file={{ semaphore_config_path }}/env \
-      --label-file={{ semaphore_config_path }}/labels \
-      --mount type=bind,src={{ semaphore_config_path }}/passwd,dst=/etc/passwd,ro \
+      --env-file={{ semaphore_base_path }}/env \
+      --label-file={{ semaphore_base_path }}/labels \
+      --mount type=bind,src={{ semaphore_base_path }}/passwd,dst=/etc/passwd,ro \
       --mount type=bind,src={{ semaphore_dyn_config_path }},dst=/etc/semaphore \
       --mount type=bind,src={{ semaphore_playbook_path }},dst={{ semaphore_container_playbook_path }} \
       --tmpfs=/tmp:rw,noexec,nosuid,size=100m \
