Preparation for update to 2.15.4
Follows https://semaphoreui.com/install/docker/2_15

Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/env.j2
+++ b/templates/env.j2
@@ -10,7 +10,7 @@ SEMAPHORE_DB_HOST={{ semaphore_database_hostname }}
 SEMAPHORE_DB_PORT={{ semaphore_database_port }}
 SEMAPHORE_DB_DIALECT={{ semaphore_database_dialect }}
 SEMAPHORE_DB={{ semaphore_database_name }}
-SEMAPHORE_PLAYBOOK_PATH={{ semaphore_container_playbook_path }}
+SEMAPHORE_PLAYBOOK_PATH={{ semaphore_tmp_path }}
 SEMAPHORE_ADMIN={{ semaphore_admin_username }}
 SEMAPHORE_ADMIN_PASSWORD={{ semaphore_admin_password }}
 SEMAPHORE_ADMIN_NAME={{ semaphore_admin_name }}
