--- a/templates/env.j2
+++ b/templates/env.j2
@@ -4,10 +4,18 @@ SPDX-FileCopyrightText: 2023 Julian-Samuel Gebühr
 SPDX-License-Identifier: AGPL-3.0-or-later
 #}
 
-SEMAPHORE_DB_USER={{ semaphore_database_username }}
-SEMAPHORE_DB_PASS={{ semaphore_database_password }}
-SEMAPHORE_DB_HOST={{ semaphore_database_hostname }}
-SEMAPHORE_DB_PORT={{ semaphore_database_port }}
+{% if semaphore_database_dialect == 'mysql' %}
+SEMAPHORE_DB_USER={{ semaphore_database_mysql_username }}
+SEMAPHORE_DB_PASS={{ semaphore_database_mysql_password }}
+SEMAPHORE_DB_PORT={{ semaphore_database_mysql_port }}
+SEMAPHORE_DB_HOST={{ semaphore_database_mysql_hostname }}
+{% endif %}
+{% if semaphore_database_dialect == 'postgres' %}
+SEMAPHORE_DB_USER={{ semaphore_database_postgres_username }}
+SEMAPHORE_DB_PASS={{ semaphore_database_postgres_password }}
+SEMAPHORE_DB_PORT={{ semaphore_database_postgres_port }}
+SEMAPHORE_DB_HOST={{ semaphore_database_postgres_hostname }}
+{% endif %}
 SEMAPHORE_DB_DIALECT={{ semaphore_database_dialect }}
 SEMAPHORE_DB={{ semaphore_database_name }}
 SEMAPHORE_PLAYBOOK_PATH={{ semaphore_tmp_path }}
