Add environment variables related to email
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/env.j2
+++ b/templates/env.j2
@@ -25,6 +25,12 @@ SEMAPHORE_ADMIN_PASSWORD={{ semaphore_admin_password }}
 SEMAPHORE_ADMIN_NAME={{ semaphore_admin_name }}
 SEMAPHORE_ADMIN_EMAIL={{ semaphore_admin_email }}
 SEMAPHORE_ACCESS_KEY_ENCRYPTION={{ semaphore_access_key_encryption }}
+SEMAPHORE_EMAIL_SENDER={{ semaphore_environment_variables_email_sender }}
+SEMAPHORE_EMAIL_HOST={{ semaphore_environment_variables_email_host }}
+SEMAPHORE_EMAIL_PORT={{ semaphore_environment_variables_email_port }}
+SEMAPHORE_EMAIL_USERNAME={{ semaphore_environment_variables_email_username }}
+SEMAPHORE_EMAIL_PASSWORD={{ semaphore_environment_variables_email_password }}
+SEMAPHORE_EMAIL_SECURE={{ semaphore_environment_variables_email_secure | to_json }}
 ANSIBLE_HOST_KEY_CHECKING=False
 
 {{ semaphore_environment_variables_additional_variables }}
