Use `semaphore_environment_variables_ansible_host_key_checking`
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/env.j2
+++ b/templates/env.j2
@@ -31,6 +31,6 @@ SEMAPHORE_EMAIL_PORT={{ semaphore_environment_variables_email_port }}
 SEMAPHORE_EMAIL_USERNAME={{ semaphore_environment_variables_email_username }}
 SEMAPHORE_EMAIL_PASSWORD={{ semaphore_environment_variables_email_password }}
 SEMAPHORE_EMAIL_SECURE={{ semaphore_environment_variables_email_secure | to_json }}
-ANSIBLE_HOST_KEY_CHECKING=False
+ANSIBLE_HOST_KEY_CHECKING={{ semaphore_environment_variables_ansible_host_key_checking | to_json }}
 
 {{ semaphore_environment_variables_additional_variables }}
