Add `semaphore_environment_variables_totp_enabled` and `semaphore_environment_variables_totp_allow_recovery`
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/env.j2
+++ b/templates/env.j2
@@ -26,6 +26,8 @@ SEMAPHORE_ADMIN_NAME={{ semaphore_admin_name }}
 SEMAPHORE_ADMIN_EMAIL={{ semaphore_admin_email }}
 SEMAPHORE_WEB_ROOT={{ semaphore_environment_variables_web_root }}
 SEMAPHORE_ACCESS_KEY_ENCRYPTION={{ semaphore_access_key_encryption }}
+SEMAPHORE_TOTP_ENABLED={{ semaphore_environment_variables_totp_enabled | to_json }}
+SEMAPHORE_TOTP_ALLOW_RECOVERY={{ semaphore_environment_variables_totp_allow_recovery | to_json }}
 SEMAPHORE_EMAIL_SENDER={{ semaphore_environment_variables_email_sender }}
 SEMAPHORE_EMAIL_HOST={{ semaphore_environment_variables_email_host }}
 SEMAPHORE_EMAIL_PORT={{ semaphore_environment_variables_email_port }}
