--- a/templates/env.j2
+++ b/templates/env.j2
@@ -9,15 +9,16 @@ SEMAPHORE_DB_USER={{ semaphore_database_mysql_username }}
 SEMAPHORE_DB_PASS={{ semaphore_database_mysql_password }}
 SEMAPHORE_DB_PORT={{ semaphore_database_mysql_port }}
 SEMAPHORE_DB_HOST={{ semaphore_database_mysql_hostname }}
+SEMAPHORE_DB_NAME={{ semaphore_database_name }}
 {% endif %}
 {% if semaphore_database_dialect == 'postgres' %}
 SEMAPHORE_DB_USER={{ semaphore_database_postgres_username }}
 SEMAPHORE_DB_PASS={{ semaphore_database_postgres_password }}
 SEMAPHORE_DB_PORT={{ semaphore_database_postgres_port }}
 SEMAPHORE_DB_HOST={{ semaphore_database_postgres_hostname }}
+SEMAPHORE_DB_NAME={{ semaphore_database_name }}
 {% endif %}
 SEMAPHORE_DB_DIALECT={{ semaphore_database_dialect }}
-SEMAPHORE_DB={{ semaphore_database_name }}
 SEMAPHORE_PLAYBOOK_PATH={{ semaphore_tmp_path }}
 SEMAPHORE_ADMIN={{ semaphore_admin_username }}
 SEMAPHORE_ADMIN_PASSWORD={{ semaphore_admin_password }}
