--- a/templates/env.j2
+++ b/templates/env.j2
@@ -19,7 +19,7 @@ SEMAPHORE_DB_HOST={{ semaphore_database_postgres_hostname }}
 SEMAPHORE_DB_NAME={{ semaphore_database_name }}
 {% endif %}
 SEMAPHORE_DB_DIALECT={{ semaphore_database_dialect }}
-SEMAPHORE_PLAYBOOK_PATH={{ semaphore_tmp_path }}
+SEMAPHORE_TMP_PATH={{ semaphore_environment_variables_tmp_path }}
 SEMAPHORE_ADMIN={{ semaphore_admin_username }}
 SEMAPHORE_ADMIN_PASSWORD={{ semaphore_admin_password }}
 SEMAPHORE_ADMIN_NAME={{ semaphore_admin_name }}
