--- a/templates/systemd/semaphore.service.j2
+++ b/templates/systemd/semaphore.service.j2
@@ -40,7 +40,7 @@ ExecStartPre={{ devture_systemd_docker_base_host_command_docker }} create \
       --mount type=bind,src={{ semaphore_base_path }}/passwd,dst=/etc/passwd,ro \
       --mount type=bind,src={{ semaphore_data_path }},dst=/var/lib/semaphore \
       --mount type=bind,src={{ semaphore_config_path }},dst=/etc/semaphore \
-      --mount type=bind,src={{ semaphore_tmp_path }},dst=/tmp/semaphore \
+      --mount type=bind,src={{ semaphore_tmp_path }},dst={{ semaphore_environment_variables_tmp_path }} \
       --tmpfs=/tmp:rw,noexec,nosuid,size=100m \
       {{ semaphore_container_image_final }}
 
