Update templates/passwd.j2: fix a comment
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/passwd.j2
+++ b/templates/passwd.j2
@@ -4,7 +4,7 @@ SPDX-FileCopyrightText: 2023 Julian-Samuel Gebühr
 SPDX-License-Identifier: AGPL-3.0-or-later
 #}
 
-{# the passwd file with correct username, UID and GID is mandatory to work with borg over ssh, otherwise ssh connections will fail #}
+{# the passwd file with correct username, UID and GID is mandatory to work with Semaphore UI over SSH, otherwise SSH connections will fail #}
 root:x:0:0:root:/root:/bin/ash
 bin:x:1:1:bin:/bin:/sbin/nologin
 daemon:x:2:2:daemon:/sbin:/sbin/nologin
