--- a/templates/env.j2
+++ b/templates/env.j2
@@ -4,21 +4,21 @@ SPDX-FileCopyrightText: 2023 Julian-Samuel Gebühr
 SPDX-License-Identifier: AGPL-3.0-or-later
 #}
 
-{% if semaphore_database_dialect == 'mysql' %}
+{% if semaphore_database_type == 'mysql' %}
 SEMAPHORE_DB_USER={{ semaphore_database_mysql_username }}
 SEMAPHORE_DB_PASS={{ semaphore_database_mysql_password }}
 SEMAPHORE_DB_PORT={{ semaphore_database_mysql_port }}
 SEMAPHORE_DB_HOST={{ semaphore_database_mysql_hostname }}
 SEMAPHORE_DB_NAME={{ semaphore_database_name }}
 {% endif %}
-{% if semaphore_database_dialect == 'postgres' %}
+{% if semaphore_database_type == 'postgres' %}
 SEMAPHORE_DB_USER={{ semaphore_database_postgres_username }}
 SEMAPHORE_DB_PASS={{ semaphore_database_postgres_password }}
 SEMAPHORE_DB_PORT={{ semaphore_database_postgres_port }}
 SEMAPHORE_DB_HOST={{ semaphore_database_postgres_hostname }}
 SEMAPHORE_DB_NAME={{ semaphore_database_name }}
 {% endif %}
-SEMAPHORE_DB_DIALECT={{ semaphore_database_dialect }}
+SEMAPHORE_DB_DIALECT={{ semaphore_database_type }}
 SEMAPHORE_TMP_PATH={{ semaphore_environment_variables_tmp_path }}
 SEMAPHORE_ADMIN={{ semaphore_admin_username }}
 SEMAPHORE_ADMIN_PASSWORD={{ semaphore_admin_password }}
