--- a/templates/env.j2
+++ b/templates/env.j2
@@ -4,6 +4,8 @@ SPDX-FileCopyrightText: 2023 Julian-Samuel Gebühr
 SPDX-License-Identifier: AGPL-3.0-or-later
 #}
 
+TZ={{ semaphore_environment_variables_tz }}
+
 {% if semaphore_database_type == 'mysql' %}
 SEMAPHORE_DB_USER={{ semaphore_database_mysql_username }}
 SEMAPHORE_DB_PASS={{ semaphore_database_mysql_password }}
