--- a/templates/systemd/semaphore.service.j2
+++ b/templates/systemd/semaphore.service.j2
@@ -42,6 +42,9 @@ ExecStartPre={{ devture_systemd_docker_base_host_command_docker }} create \
       --mount type=bind,src={{ semaphore_config_path }},dst=/etc/semaphore \
       --mount type=bind,src={{ semaphore_tmp_path }},dst={{ semaphore_environment_variables_tmp_path }} \
       --tmpfs=/tmp:rw,noexec,nosuid,size=100m \
+      {% for arg in semaphore_container_extra_arguments %}
+      {{ arg }} \
+      {% endfor %}
       {{ semaphore_container_image_final }}
 
 {% for network in semaphore_container_additional_networks %}
